--- a/public/scss/_theme.scss
+++ b/public/scss/_theme.scss
@@ -9,11 +9,12 @@ body {
 	position: absolute;
 	height: 100%;
 	width: 100%;
+	display: flex;
 }
 
 .chat-window {
 	height: 80%;
-	margin: 0 auto;
+	margin: auto;
 	.window-controls {
     	width: 100%;
     	height: 20px;
