--- a/public/scss/_theme.scss
+++ b/public/scss/_theme.scss
@@ -12,62 +12,25 @@ body {
 	display: flex;
 }
 
+.chat-app {
+	height: 100%;
+	display: flex;
+}
+
 .chat-window {
-	height: 80%;
-	margin: auto;
-	.window-controls {
-    	width: 100%;
-    	height: 20px;
-    	border-top-left-radius: 7px;
-    	border-top-right-radius: 7px;
-    	background-color: #cccccc;
-    }
-	.chat-container {
-		background-color: #ffffff;
-		height: 100%;
-		.row {
-			height: 100%;
-			[class*='col-']{
-				height: 100%;
-			}
-		}
+	flex-direction: column;
+	display: flex;
+	&__messages {
+		flex: 1;
 	}
-	.chat-list {
-		height: 100%;
-		list-style: none;
-		border-right: 1px solid #cccccc;
-		li {
-			padding: 20px 10px;
-			border-bottom: 1px solid #cccccc;
-		}
-		li:last-child {
-			border-bottom: 0px;
-		}
-	}
-	.chat-box {
-		height: 100%;
-		padding: 20px;
-		.row {
-			height: 100%;
-			[class*='col-']{
-				height: 100%;
-			}
-		}
-		.chat-form {
-			position: absolute;
-			bottom: 20px;
-			height: auto;
-			width: 100%;
-		}
-		.chat-message {
-			height: auto;
-			span {
-				background: #4286f4;
-				color: #ffffff;
-				padding: 4px 8px;
-				display: inline-block;
-				margin-bottom: 5px;
-			}
+	&__message {
+		height: auto;
+		span {
+			background: #4286f4;
+			color: #ffffff;
+			padding: 4px 8px;
+			display: inline-block;
+			margin-bottom: 5px;
 		}
 	}
 }
