--- a/public/scss/_theme.scss
+++ b/public/scss/_theme.scss
@@ -2,7 +2,7 @@
 // custom styles
 
 body {
-	background: #efefef;
+	background: color('light-1');
 }
 
 #app-container {
@@ -10,27 +10,64 @@ body {
 	height: 100%;
 	width: 100%;
 	display: flex;
+	padding: spacing('sm');
+	@include for-size(tablet-landscape-up) {
+		padding: spacing('xxl');
+	}
 }
 
 .chat-app {
 	height: 100%;
 	display: flex;
+	background: color('white');
+	width: 100%;
 }
 
 .chat-window {
 	flex-direction: column;
 	display: flex;
+	width: 100%;
 	&__messages {
 		flex: 1;
+		padding: spacing('lg') spacing('md');
 	}
 	&__message {
 		height: auto;
 		span {
-			background: #4286f4;
 			color: #ffffff;
 			padding: 4px 8px;
 			display: inline-block;
 			margin-bottom: 5px;
+			max-width: 500px;
+		}
+		&.user-0 {
+			span {
+				background: #4286f4;
+			}
+		}
+		&.user-1 {
+			text-align: right;
+			span {
+				background: #28b774;
+				margin-left: auto;
+			}
+		}
+	}
+}
+
+.chat-form {
+	padding: spacing('sm') spacing('md');
+	border-top: 1px solid color('gray-0');
+	form {
+		display: flex;
+		.ter-input {
+			flex: 1;
+			input {
+				border: 0px;
+				&:focus {
+					box-shadow: none;
+				}
+			}
 		}
 	}
 }
